# argus-ops

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  argus-ops-0.3.0.tgz  index.yaml  pyproject.toml
.github/workflows/: ci.yml  docker.yml  publish.yml
deploy/helm/argus-ops/: Chart.yaml  values.yaml
deploy/helm/argus-ops/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  pvc.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
deploy/k8s/: configmap.yaml  deployment.yaml  rbac.yaml
src/argus_ops/: __init__.py  automation.py  cli.py  config.py  discovery.py  inventory_store.py  logging_config.py  models.py  store.py
src/argus_ops/ai/: __init__.py  base.py  cost.py  provider.py
src/argus_ops/ai/prompts/: diagnose.j2
src/argus_ops/analyzers/: __init__.py  base.py  configuration.py  cronjob.py  network_policy.py  node_health.py  pod_health.py  resource.py  security.py  storage.py
src/argus_ops/audit/: __init__.py  correlator.py  k8s_audit.py  logger.py  models.py  viewer.py
src/argus_ops/auth/: __init__.py  authenticator.py  authorizer.py  models.py  user_store.py
src/argus_ops/collectors/: __init__.py  base.py  k8s.py  local.py  watcher.py
src/argus_ops/engine/: __init__.py  pipeline.py
src/argus_ops/healers/: __init__.py  approval.py  k8s_healer.py  risk.py
src/argus_ops/reporters/: __init__.py  console.py  json_reporter.py
src/argus_ops/web/: __init__.py  api.py  watch_service.py
src/argus_ops/web/templates/: dashboard.html  login.html
tests/: conftest.py  test_analyzers.py  test_api.py  test_audit.py  test_auth.py  test_cli.py  test_config.py  test_docs_drift.py  test_healers.py  test_models.py  test_new_analyzers.py  test_pipeline.py  test_reporters.py  test_store.py
tests/fixtures/: k8s_nodes.json  k8s_pods.json
